// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer: chained select 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <div
              class="amis-Panel amis-Panel--default amis-Panel--form"
              data-role="container"
            >
              <div
                class="amis-Panel-heading"
              >
                <h3
                  class="amis-Panel-title"
                >
                  <span
                    class="amis-TplField fr-view"
                  >
                    <span>
                      表单
                    </span>
                  </span>
                </h3>
              </div>
              <div
                class="amis-Panel-body"
              >
                <form
                  class="amis-Form amis-Form--normal"
                  novalidate=""
                >
                  <input
                    style="display: none;"
                    type="submit"
                  />
                  <div
                    class="amis-Form-item amis-Form-item--normal"
                    data-amis-name="a"
                    data-role="form-item"
                  >
                    <label
                      class="amis-Form-label"
                    >
                      <span>
                        <span
                          class="amis-TplField fr-view"
                        >
                          <span>
                            带搜索
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="amis-SelectControl amis-Form-control"
                    >
                      <div
                        class="amis-ResultBox amis-TransferDropDown amis-Form-control is-clickable is-group"
                        tabindex="-1"
                      >
                        <div
                          class="amis-ResultBox-value-wrap"
                        >
                          <span
                            class="amis-ResultBox-placeholder"
                          >
                            请选择
                          </span>
                        </div>
                        <div
                          class="amis-ResultBox-actions"
                        >
                          <span
                            class="amis-ResultBox-pc-arrow"
                          >
                            <icon-mock
                              classname="icon icon-right-arrow-bold"
                              icon="right-arrow-bold"
                            />
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="amis-Panel-footerWrap"
              >
                <div
                  class="amis-Panel-btnToolbar amis-Panel-footer"
                >
                  <button
                    class="amis-Button amis-Button--primary amis-Button--size-default"
                    type="submit"
                  >
                    <span>
                      提交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:select associated 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <div
              class="amis-Panel amis-Panel--default amis-Panel--form"
              data-role="container"
            >
              <div
                class="amis-Panel-heading"
              >
                <h3
                  class="amis-Panel-title"
                >
                  <span
                    class="amis-TplField fr-view"
                  >
                    <span>
                      表单
                    </span>
                  </span>
                </h3>
              </div>
              <div
                class="amis-Panel-body"
              >
                <form
                  class="amis-Form amis-Form--normal"
                  novalidate=""
                >
                  <input
                    style="display: none;"
                    type="submit"
                  />
                  <div
                    class="amis-Form-item amis-Form-item--normal"
                    data-amis-name="b"
                    data-role="form-item"
                  >
                    <label
                      class="amis-Form-label"
                    >
                      <span>
                        <span
                          class="amis-TplField fr-view"
                        >
                          <span>
                            关联选择模式
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="amis-SelectControl amis-Form-control"
                    >
                      <div
                        class="amis-ResultBox amis-TransferDropDown amis-Form-control is-clickable"
                        tabindex="-1"
                      >
                        <div
                          class="amis-ResultBox-value-wrap"
                        >
                          <span
                            class="amis-ResultBox-placeholder"
                          >
                            请选择
                          </span>
                        </div>
                        <div
                          class="amis-ResultBox-actions"
                        >
                          <span
                            class="amis-ResultBox-pc-arrow"
                          >
                            <icon-mock
                              classname="icon icon-right-arrow-bold"
                              icon="right-arrow-bold"
                            />
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="amis-Panel-footerWrap"
              >
                <div
                  class="amis-Panel-btnToolbar amis-Panel-footer"
                >
                  <button
                    class="amis-Button amis-Button--primary amis-Button--size-default"
                    type="submit"
                  >
                    <span>
                      提交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:select associated mode with virtual 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              表单
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="select"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    级联
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-SelectControl amis-Form-control"
            >
              <div
                class="amis-ResultBox amis-TransferDropDown amis-Form-control is-opened is-clickable"
                tabindex="-1"
              >
                <div
                  class="amis-ResultBox-value-wrap"
                >
                  <span
                    class="amis-ResultBox-placeholder"
                  >
                    请选择
                  </span>
                </div>
                <div
                  class="amis-ResultBox-actions"
                >
                  <span
                    class="amis-ResultBox-pc-arrow"
                  >
                    <icon-mock
                      classname="icon icon-right-arrow-bold"
                      icon="right-arrow-bold"
                    />
                  </span>
                </div>
              </div>
              <div
                class="has-popover"
                data-amis-theme="cxd"
              >
                <div
                  class="amis-PopOver amis-TransferDropDown-popover"
                  role="popover"
                  style="display: block; min-width: 100px; left: 0px; top: 0px; visibility: hidden;"
                  theme="cxd"
                >
                  <div
                    class="cxd-PopOver-overlay"
                  />
                  <div
                    class="amis-TransferDropDown-content"
                  >
                    <div
                      class="amis-AssociatedSelection amis-Transfer-selection"
                    >
                      <div
                        class="amis-AssociatedSelection-left"
                      >
                        <div
                          class="amis-GroupedSelection"
                        >
                          <div
                            style="display: block; position: relative; width: 100%; height: 100%;"
                          >
                            <div
                              style="overflow: auto; will-change: transform; height: 0px; width: 100%;"
                            >
                              <div
                                style="position: relative; width: auto; white-space: nowrap; min-height: 100%; height: 38760px;"
                              >
                                <div
                                  class="amis-GroupedSelection-group"
                                  style="position: absolute; top: 0px; left: 0px; width: 100%; height: 38px;"
                                >
                                  <div
                                    class="amis-GroupedSelection-itemLabel"
                                  >
                                    <span
                                      class=" amis-Selection-ellipsis-line"
                                      title="group-1 "
                                    >
                                      group-1
                                    </span>
                                  </div>
                                </div>
                                <div
                                  class="amis-GroupedSelection-group"
                                  style="position: absolute; top: 38px; left: 0px; width: 100%; height: 38px;"
                                >
                                  <div
                                    class="amis-GroupedSelection-items"
                                  >
                                    <div
                                      class="amis-GroupedSelection-item is-active"
                                    >
                                      <div
                                        class="amis-GroupedSelection-itemLabel"
                                      >
                                        <span
                                          class=" amis-Selection-ellipsis-line"
                                          title="group-1-option-1 "
                                        >
                                          group-1-option-1
                                        </span>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="amis-GroupedSelection-group"
                                  style="position: absolute; top: 76px; left: 0px; width: 100%; height: 38px;"
                                >
                                  <div
                                    class="amis-GroupedSelection-items"
                                  >
                                    <div
                                      class="amis-GroupedSelection-item"
                                    >
                                      <div
                                        class="amis-GroupedSelection-itemLabel"
                                      >
                                        <span
                                          class=" amis-Selection-ellipsis-line"
                                          title="group-1-option-2 "
                                        >
                                          group-1-option-2
                                        </span>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="amis-GroupedSelection-group"
                                  style="position: absolute; top: 114px; left: 0px; width: 100%; height: 38px;"
                                >
                                  <div
                                    class="amis-GroupedSelection-items"
                                  >
                                    <div
                                      class="amis-GroupedSelection-item"
                                    >
                                      <div
                                        class="amis-GroupedSelection-itemLabel"
                                      >
                                        <span
                                          class=" amis-Selection-ellipsis-line"
                                          title="group-1-option-3 "
                                        >
                                          group-1-option-3
                                        </span>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="amis-AssociatedSelection-right"
                      >
                        <div
                          class="amis-TableSelection"
                        >
                          <div
                            class="amis-Table-content is-virtual"
                          >
                            <table
                              class="amis-Table-table"
                            >
                              <thead>
                                <tr>
                                  <th>
                                    名称
                                  </th>
                                  <th>
                                    值得
                                  </th>
                                </tr>
                              </thead>
                            </table>
                            <div
                              class="amis-Table-content-virtual"
                            >
                              <div
                                style="display: block; position: relative; width: 100%; height: 100%;"
                              >
                                <div
                                  style="overflow: auto; will-change: transform; height: 0px; width: 100%;"
                                >
                                  <table
                                    class="amis-Table-table"
                                    style="margin-top: 0px;"
                                  >
                                    <colgroup>
                                      <col
                                        style="width: 0px;"
                                      />
                                      <col
                                        style="width: 0px;"
                                      />
                                    </colgroup>
                                    <tbody>
                                      <tr
                                        class=""
                                        style="height: 38px;"
                                      >
                                        <td>
                                          <span>
                                            label-1
                                          </span>
                                        </td>
                                        <td>
                                          <span>
                                            value-1
                                          </span>
                                        </td>
                                      </tr>
                                      <tr
                                        class=""
                                        style="height: 38px;"
                                      >
                                        <td>
                                          <span>
                                            label-2
                                          </span>
                                        </td>
                                        <td>
                                          <span>
                                            value-2
                                          </span>
                                        </td>
                                      </tr>
                                      <tr
                                        class=""
                                        style="height: 38px;"
                                      >
                                        <td>
                                          <span>
                                            label-3
                                          </span>
                                        </td>
                                        <td>
                                          <span>
                                            value-3
                                          </span>
                                        </td>
                                      </tr>
                                      <tr
                                        class=""
                                        style="height: 38px;"
                                      >
                                        <td>
                                          <span>
                                            label-4
                                          </span>
                                        </td>
                                        <td>
                                          <span>
                                            value-4
                                          </span>
                                        </td>
                                      </tr>
                                    </tbody>
                                  </table>
                                  <div
                                    style="position: absolute; width: 1px; white-space: nowrap; min-height: 100%; height: 3838px; top: 0px; visibility: hidden;"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="amis-Panel-footerWrap"
      >
        <div
          class="amis-Panel-btnToolbar amis-Panel-footer"
        >
          <button
            class="amis-Button amis-Button--primary amis-Button--size-default"
            type="submit"
          >
            <span>
              提交
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:select chained 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <div
              class="amis-Panel amis-Panel--default amis-Panel--form"
              data-role="container"
            >
              <div
                class="amis-Panel-heading"
              >
                <h3
                  class="amis-Panel-title"
                >
                  <span
                    class="amis-TplField fr-view"
                  >
                    <span>
                      表单
                    </span>
                  </span>
                </h3>
              </div>
              <div
                class="amis-Panel-body"
              >
                <form
                  class="amis-Form amis-Form--normal"
                  novalidate=""
                >
                  <input
                    style="display: none;"
                    type="submit"
                  />
                  <div
                    class="amis-Form-item amis-Form-item--normal"
                    data-amis-name="a"
                    data-role="form-item"
                  >
                    <label
                      class="amis-Form-label"
                    >
                      <span>
                        <span
                          class="amis-TplField fr-view"
                        >
                          <span>
                            级联选择
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="amis-SelectControl amis-Form-control"
                    >
                      <div
                        class="amis-ResultBox amis-TransferDropDown amis-Form-control is-clickable"
                        tabindex="-1"
                      >
                        <div
                          class="amis-ResultBox-value-wrap"
                        >
                          <span
                            class="amis-ResultBox-placeholder"
                          >
                            请选择
                          </span>
                        </div>
                        <div
                          class="amis-ResultBox-actions"
                        >
                          <span
                            class="amis-ResultBox-pc-arrow"
                          >
                            <icon-mock
                              classname="icon icon-right-arrow-bold"
                              icon="right-arrow-bold"
                            />
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="amis-Panel-footerWrap"
              >
                <div
                  class="amis-Panel-btnToolbar amis-Panel-footer"
                >
                  <button
                    class="amis-Button amis-Button--primary amis-Button--size-default"
                    type="submit"
                  >
                    <span>
                      提交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:select chained mode with virtual 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              表单
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="select"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    级联
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-SelectControl amis-Form-control"
            >
              <div
                class="amis-ResultBox amis-TransferDropDown amis-Form-control is-opened is-clickable"
                tabindex="-1"
              >
                <div
                  class="amis-ResultBox-value-wrap"
                >
                  <span
                    class="amis-ResultBox-placeholder"
                  >
                    请选择
                  </span>
                </div>
                <div
                  class="amis-ResultBox-actions"
                >
                  <span
                    class="amis-ResultBox-pc-arrow"
                  >
                    <icon-mock
                      classname="icon icon-right-arrow-bold"
                      icon="right-arrow-bold"
                    />
                  </span>
                </div>
              </div>
              <div
                class="has-popover"
                data-amis-theme="cxd"
              >
                <div
                  class="amis-PopOver amis-TransferDropDown-popover"
                  role="popover"
                  style="display: block; min-width: 100px; left: 0px; top: 0px; visibility: hidden;"
                  theme="cxd"
                >
                  <div
                    class="cxd-PopOver-overlay"
                  />
                  <div
                    class="amis-TransferDropDown-content"
                  >
                    <div
                      class="amis-ChainedSelection amis-Transfer-selection"
                    >
                      <div
                        class="amis-ChainedSelection-col"
                      >
                        <div
                          style="display: block; position: relative; width: 100%; height: 100%; min-height: 266px;"
                        >
                          <div
                            style="overflow: auto; will-change: transform; height: 0px; width: 100%;"
                          >
                            <div
                              style="position: relative; width: auto; white-space: nowrap; min-height: 100%; height: 3838px;"
                            >
                              <div
                                class="amis-ChainedSelection-item is-active"
                                style="position: absolute; top: 0px; left: 0px; width: 100%; height: 38px;"
                              >
                                <div
                                  class="amis-ChainedSelection-itemLabel"
                                >
                                  group-1
                                </div>
                              </div>
                              <div
                                class="amis-ChainedSelection-item"
                                style="position: absolute; top: 38px; left: 0px; width: 100%; height: 38px;"
                              >
                                <div
                                  class="amis-ChainedSelection-itemLabel"
                                >
                                  group-2
                                </div>
                              </div>
                              <div
                                class="amis-ChainedSelection-item"
                                style="position: absolute; top: 76px; left: 0px; width: 100%; height: 38px;"
                              >
                                <div
                                  class="amis-ChainedSelection-itemLabel"
                                >
                                  group-3
                                </div>
                              </div>
                              <div
                                class="amis-ChainedSelection-item"
                                style="position: absolute; top: 114px; left: 0px; width: 100%; height: 38px;"
                              >
                                <div
                                  class="amis-ChainedSelection-itemLabel"
                                >
                                  group-4
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="amis-ChainedSelection-col"
                      >
                        <div
                          style="display: block; position: relative; width: 100%; height: 100%; min-height: 266px;"
                        >
                          <div
                            style="overflow: auto; will-change: transform; height: 0px; width: 100%;"
                          >
                            <div
                              style="position: relative; width: auto; white-space: nowrap; min-height: 100%; height: 3838px;"
                            >
                              <div
                                class="amis-ChainedSelection-item"
                                style="position: absolute; top: 0px; left: 0px; width: 100%; height: 38px;"
                              >
                                <div
                                  class="amis-ChainedSelection-itemLabel"
                                >
                                  group-1-option-1
                                </div>
                              </div>
                              <div
                                class="amis-ChainedSelection-item"
                                style="position: absolute; top: 38px; left: 0px; width: 100%; height: 38px;"
                              >
                                <div
                                  class="amis-ChainedSelection-itemLabel"
                                >
                                  group-1-option-2
                                </div>
                              </div>
                              <div
                                class="amis-ChainedSelection-item"
                                style="position: absolute; top: 76px; left: 0px; width: 100%; height: 38px;"
                              >
                                <div
                                  class="amis-ChainedSelection-itemLabel"
                                >
                                  group-1-option-3
                                </div>
                              </div>
                              <div
                                class="amis-ChainedSelection-item"
                                style="position: absolute; top: 114px; left: 0px; width: 100%; height: 38px;"
                              >
                                <div
                                  class="amis-ChainedSelection-itemLabel"
                                >
                                  group-1-option-4
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="amis-Panel-footerWrap"
      >
        <div
          class="amis-Panel-btnToolbar amis-Panel-footer"
        >
          <button
            class="amis-Button amis-Button--primary amis-Button--size-default"
            type="submit"
          >
            <span>
              提交
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:select group 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <div
              class="amis-Panel amis-Panel--default amis-Panel--form"
              data-role="container"
            >
              <div
                class="amis-Panel-heading"
              >
                <h3
                  class="amis-Panel-title"
                >
                  <span
                    class="amis-TplField fr-view"
                  >
                    <span>
                      表单
                    </span>
                  </span>
                </h3>
              </div>
              <div
                class="amis-Panel-body"
              >
                <form
                  class="amis-Form amis-Form--normal"
                  novalidate=""
                >
                  <input
                    style="display: none;"
                    type="submit"
                  />
                  <div
                    class="amis-Form-item amis-Form-item--normal"
                    data-amis-name="a"
                    data-role="form-item"
                  >
                    <label
                      class="amis-Form-label"
                    >
                      <span>
                        <span
                          class="amis-TplField fr-view"
                        >
                          <span>
                            分组
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="amis-SelectControl amis-Form-control"
                    >
                      <div
                        class="amis-ResultBox amis-TransferDropDown amis-Form-control is-clickable"
                        tabindex="-1"
                      >
                        <div
                          class="amis-ResultBox-value-wrap"
                        >
                          <span
                            class="amis-ResultBox-placeholder"
                          >
                            请选择
                          </span>
                        </div>
                        <div
                          class="amis-ResultBox-actions"
                        >
                          <span
                            class="amis-ResultBox-pc-arrow"
                          >
                            <icon-mock
                              classname="icon icon-right-arrow-bold"
                              icon="right-arrow-bold"
                            />
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="amis-Panel-footerWrap"
              >
                <div
                  class="amis-Panel-btnToolbar amis-Panel-footer"
                >
                  <button
                    class="amis-Button amis-Button--primary amis-Button--size-default"
                    type="submit"
                  >
                    <span>
                      提交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:select group mode with virtual 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              表单
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="select"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    分组
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-SelectControl amis-Form-control"
            >
              <div
                class="amis-ResultBox amis-TransferDropDown amis-Form-control is-opened is-clickable"
                tabindex="-1"
              >
                <div
                  class="amis-ResultBox-value-wrap"
                >
                  <span
                    class="amis-ResultBox-placeholder"
                  >
                    请选择
                  </span>
                </div>
                <div
                  class="amis-ResultBox-actions"
                >
                  <span
                    class="amis-ResultBox-pc-arrow"
                  >
                    <icon-mock
                      classname="icon icon-right-arrow-bold"
                      icon="right-arrow-bold"
                    />
                  </span>
                </div>
              </div>
              <div
                class="has-popover"
                data-amis-theme="cxd"
              >
                <div
                  class="amis-PopOver amis-TransferDropDown-popover"
                  role="popover"
                  style="display: block; min-width: 100px; left: 0px; top: 0px; visibility: hidden;"
                  theme="cxd"
                >
                  <div
                    class="cxd-PopOver-overlay"
                  />
                  <div
                    class="amis-TransferDropDown-content"
                  >
                    <div
                      class="amis-GroupedSelection amis-Transfer-selection"
                    >
                      <div
                        style="display: block; position: relative; width: 100%; height: 100%; min-height: 266px;"
                      >
                        <div
                          style="overflow: auto; will-change: transform; height: 0px; width: 100%;"
                        >
                          <div
                            style="position: relative; width: auto; white-space: nowrap; min-height: 100%; height: 8360px;"
                          >
                            <div
                              class="amis-GroupedSelection-group"
                              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 38px;"
                            >
                              <div
                                class="amis-GroupedSelection-itemLabel"
                              >
                                group-1
                              </div>
                            </div>
                            <div
                              class="amis-GroupedSelection-group"
                              style="position: absolute; top: 38px; left: 0px; width: 100%; height: 38px;"
                            >
                              <div
                                class="amis-GroupedSelection-items"
                              >
                                <div
                                  class="amis-GroupedSelection-item"
                                >
                                  <div
                                    class="amis-GroupedSelection-itemLabel"
                                  >
                                    option-1
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="amis-GroupedSelection-group"
                              style="position: absolute; top: 76px; left: 0px; width: 100%; height: 38px;"
                            >
                              <div
                                class="amis-GroupedSelection-items"
                              >
                                <div
                                  class="amis-GroupedSelection-item"
                                >
                                  <div
                                    class="amis-GroupedSelection-itemLabel"
                                  >
                                    option-2
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="amis-GroupedSelection-group"
                              style="position: absolute; top: 114px; left: 0px; width: 100%; height: 38px;"
                            >
                              <div
                                class="amis-GroupedSelection-items"
                              >
                                <div
                                  class="amis-GroupedSelection-item"
                                >
                                  <div
                                    class="amis-GroupedSelection-itemLabel"
                                  >
                                    option-3
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="amis-Panel-footerWrap"
      >
        <div
          class="amis-Panel-btnToolbar amis-Panel-footer"
        >
          <button
            class="amis-Button amis-Button--primary amis-Button--size-default"
            type="submit"
          >
            <span>
              提交
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:select menutpl 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <div
              class="amis-Panel amis-Panel--default amis-Panel--form"
              data-role="container"
            >
              <div
                class="amis-Panel-heading"
              >
                <h3
                  class="amis-Panel-title"
                >
                  <span
                    class="amis-TplField fr-view"
                  >
                    <span>
                      表单
                    </span>
                  </span>
                </h3>
              </div>
              <div
                class="amis-Panel-body"
              >
                <form
                  class="amis-Form amis-Form--normal"
                  novalidate=""
                >
                  <input
                    style="display: none;"
                    type="submit"
                  />
                  <div
                    class="amis-Form-item amis-Form-item--normal"
                    data-amis-name="select"
                    data-role="form-item"
                  >
                    <label
                      class="amis-Form-label"
                    >
                      <span>
                        <span
                          class="amis-TplField fr-view"
                        >
                          <span>
                            选项
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="amis-SelectControl amis-Form-control"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        class="amis-Select"
                        role="combobox"
                        tabindex="0"
                      >
                        <div
                          class="amis-Select-valueWrap"
                        >
                          <div
                            class="amis-Select-placeholder"
                          >
                            请选择
                          </div>
                        </div>
                        <span
                          class="amis-Select-arrow"
                        >
                          <icon-mock
                            classname="icon icon-right-arrow-bold"
                            icon="right-arrow-bold"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="amis-Panel-footerWrap"
              >
                <div
                  class="amis-Panel-btnToolbar amis-Panel-footer"
                >
                  <button
                    class="amis-Button amis-Button--primary amis-Button--size-default"
                    type="submit"
                  >
                    <span>
                      提交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:select table 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <div
              class="amis-Panel amis-Panel--default amis-Panel--form"
              data-role="container"
            >
              <div
                class="amis-Panel-heading"
              >
                <h3
                  class="amis-Panel-title"
                >
                  <span
                    class="amis-TplField fr-view"
                  >
                    <span>
                      表单
                    </span>
                  </span>
                </h3>
              </div>
              <div
                class="amis-Panel-body"
              >
                <form
                  class="amis-Form amis-Form--normal"
                  novalidate=""
                >
                  <input
                    style="display: none;"
                    type="submit"
                  />
                  <div
                    class="amis-Form-item amis-Form-item--normal"
                    data-amis-name="a"
                    data-role="form-item"
                  >
                    <label
                      class="amis-Form-label"
                    >
                      <span>
                        <span
                          class="amis-TplField fr-view"
                        >
                          <span>
                            表格形式
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="amis-SelectControl amis-Form-control"
                    >
                      <div
                        class="amis-ResultBox amis-TransferDropDown amis-Form-control is-clickable"
                        tabindex="-1"
                      >
                        <div
                          class="amis-ResultBox-value-wrap"
                        >
                          <span
                            class="amis-ResultBox-placeholder"
                          >
                            请选择
                          </span>
                        </div>
                        <div
                          class="amis-ResultBox-actions"
                        >
                          <span
                            class="amis-ResultBox-pc-arrow"
                          >
                            <icon-mock
                              classname="icon icon-right-arrow-bold"
                              icon="right-arrow-bold"
                            />
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="amis-Panel-footerWrap"
              >
                <div
                  class="amis-Panel-btnToolbar amis-Panel-footer"
                >
                  <button
                    class="amis-Button amis-Button--primary amis-Button--size-default"
                    type="submit"
                  >
                    <span>
                      提交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:select table mode with virtual 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              表单
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="select"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    表格
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-SelectControl amis-Form-control"
            >
              <div
                class="amis-ResultBox amis-TransferDropDown amis-Form-control is-opened is-clickable"
                tabindex="-1"
              >
                <div
                  class="amis-ResultBox-value-wrap"
                >
                  <span
                    class="amis-ResultBox-placeholder"
                  >
                    请选择
                  </span>
                </div>
                <div
                  class="amis-ResultBox-actions"
                >
                  <span
                    class="amis-ResultBox-pc-arrow"
                  >
                    <icon-mock
                      classname="icon icon-right-arrow-bold"
                      icon="right-arrow-bold"
                    />
                  </span>
                </div>
              </div>
              <div
                class="has-popover"
                data-amis-theme="cxd"
              >
                <div
                  class="amis-PopOver amis-TransferDropDown-popover"
                  role="popover"
                  style="display: block; min-width: 100px; left: 0px; top: 0px; visibility: hidden;"
                  theme="cxd"
                >
                  <div
                    class="cxd-PopOver-overlay"
                  />
                  <div
                    class="amis-TransferDropDown-content"
                  >
                    <div
                      class="amis-TableSelection amis-Transfer-selection"
                    >
                      <div
                        class="amis-Table-content is-virtual"
                      >
                        <table
                          class="amis-Table-table"
                        >
                          <thead>
                            <tr>
                              <th>
                                名称
                              </th>
                              <th>
                                值
                              </th>
                            </tr>
                          </thead>
                        </table>
                        <div
                          class="amis-Table-content-virtual"
                        >
                          <div
                            style="display: block; position: relative; width: 100%; height: 100%; min-height: 266px;"
                          >
                            <div
                              style="overflow: auto; will-change: transform; height: 0px; width: 100%;"
                            >
                              <table
                                class="amis-Table-table"
                                style="margin-top: 0px;"
                              >
                                <colgroup>
                                  <col
                                    style="width: 0px;"
                                  />
                                  <col
                                    style="width: 0px;"
                                  />
                                </colgroup>
                                <tbody>
                                  <tr
                                    class=""
                                    style="height: 38px;"
                                  >
                                    <td>
                                      <span>
                                        label-1
                                      </span>
                                    </td>
                                    <td>
                                      <span>
                                        1
                                      </span>
                                    </td>
                                  </tr>
                                  <tr
                                    class=""
                                    style="height: 38px;"
                                  >
                                    <td>
                                      <span>
                                        label-2
                                      </span>
                                    </td>
                                    <td>
                                      <span>
                                        2
                                      </span>
                                    </td>
                                  </tr>
                                  <tr
                                    class=""
                                    style="height: 38px;"
                                  >
                                    <td>
                                      <span>
                                        label-3
                                      </span>
                                    </td>
                                    <td>
                                      <span>
                                        3
                                      </span>
                                    </td>
                                  </tr>
                                  <tr
                                    class=""
                                    style="height: 38px;"
                                  >
                                    <td>
                                      <span>
                                        label-4
                                      </span>
                                    </td>
                                    <td>
                                      <span>
                                        4
                                      </span>
                                    </td>
                                  </tr>
                                </tbody>
                              </table>
                              <div
                                style="position: absolute; width: 1px; white-space: nowrap; min-height: 100%; height: 7600px; top: 0px; visibility: hidden;"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="amis-Panel-footerWrap"
      >
        <div
          class="amis-Panel-btnToolbar amis-Panel-footer"
        >
          <button
            class="amis-Button amis-Button--primary amis-Button--size-default"
            type="submit"
          >
            <span>
              提交
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:select table with labelField & valueField 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              表单
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="a"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    表格形式
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-SelectControl amis-Form-control"
            >
              <div
                class="amis-ResultBox amis-TransferDropDown amis-Form-control is-opened is-clickable is-group"
                tabindex="-1"
              >
                <div
                  class="amis-ResultBox-value-wrap"
                >
                  <div
                    class="amis-ResultBox-value"
                  >
                    <span
                      class="amis-ResultBox-valueLabel"
                      data-index="0"
                    >
                      诸葛亮
                    </span>
                    <a
                      data-index="0"
                    >
                      <icon-mock
                        classname="icon icon-close"
                        icon="close"
                      />
                    </a>
                  </div>
                  <div
                    class="amis-ResultBox-value"
                  >
                    <span
                      class="amis-ResultBox-valueLabel"
                      data-index="1"
                    >
                      李白
                    </span>
                    <a
                      data-index="1"
                    >
                      <icon-mock
                        classname="icon icon-close"
                        icon="close"
                      />
                    </a>
                  </div>
                </div>
                <div
                  class="amis-ResultBox-actions"
                >
                  <span
                    class="amis-ResultBox-pc-arrow"
                  >
                    <icon-mock
                      classname="icon icon-right-arrow-bold"
                      icon="right-arrow-bold"
                    />
                  </span>
                </div>
              </div>
              <div
                class="has-popover"
                data-amis-theme="cxd"
              >
                <div
                  class="amis-PopOver amis-TransferDropDown-popover"
                  role="popover"
                  style="display: block; min-width: 100px; left: 0px; top: 0px; visibility: hidden;"
                  theme="cxd"
                >
                  <div
                    class="cxd-PopOver-overlay"
                  />
                  <div
                    class="amis-TransferDropDown-content"
                  >
                    <div
                      class="amis-TableSelection amis-Transfer-selection"
                    >
                      <div
                        class="amis-Table-content"
                      >
                        <table
                          class="amis-Table-table"
                        >
                          <thead>
                            <tr>
                              <th
                                class="amis-Table-checkCell"
                              >
                                <label
                                  class="amis-Checkbox amis-Checkbox--checkbox--default amis-Checkbox--partial amis-Checkbox--sm checked amis-Checkbox--checkbox--default--checked"
                                  data-role="checkbox"
                                >
                                  <input
                                    type="checkbox"
                                  />
                                  <i>
                                    <div
                                      class="checkbox-icon icon"
                                    />
                                  </i>
                                  <span
                                    class=""
                                  />
                                </label>
                              </th>
                              <th>
                                英雄
                              </th>
                              <th>
                                位置
                              </th>
                            </tr>
                          </thead>
                          <tbody>
                            <tr
                              class="is-active"
                            >
                              <td
                                class="amis-Table-checkCell"
                              >
                                <label
                                  class="amis-Checkbox amis-Checkbox--checkbox--default amis-Checkbox--sm checked amis-Checkbox--checkbox--default--checked"
                                  data-role="checkbox"
                                >
                                  <input
                                    type="checkbox"
                                  />
                                  <i>
                                    <div
                                      class="checkbox-icon icon"
                                    />
                                  </i>
                                  <span
                                    class=""
                                  />
                                </label>
                              </td>
                              <td>
                                <span>
                                  诸葛亮
                                </span>
                              </td>
                              <td>
                                <span>
                                  中单
                                </span>
                              </td>
                            </tr>
                            <tr
                              class=""
                            >
                              <td
                                class="amis-Table-checkCell"
                              >
                                <label
                                  class="amis-Checkbox amis-Checkbox--checkbox--default amis-Checkbox--sm"
                                  data-role="checkbox"
                                >
                                  <input
                                    type="checkbox"
                                  />
                                  <i>
                                    <div
                                      class="checkbox-icon icon"
                                    />
                                  </i>
                                  <span
                                    class=""
                                  />
                                </label>
                              </td>
                              <td>
                                <span>
                                  曹操
                                </span>
                              </td>
                              <td>
                                <span>
                                  上单
                                </span>
                              </td>
                            </tr>
                            <tr
                              class=""
                            >
                              <td
                                class="amis-Table-checkCell"
                              >
                                <label
                                  class="amis-Checkbox amis-Checkbox--checkbox--default amis-Checkbox--sm"
                                  data-role="checkbox"
                                >
                                  <input
                                    type="checkbox"
                                  />
                                  <i>
                                    <div
                                      class="checkbox-icon icon"
                                    />
                                  </i>
                                  <span
                                    class=""
                                  />
                                </label>
                              </td>
                              <td>
                                <span>
                                  钟无艳
                                </span>
                              </td>
                              <td>
                                <span>
                                  上单
                                </span>
                              </td>
                            </tr>
                            <tr
                              class="is-active"
                            >
                              <td
                                class="amis-Table-checkCell"
                              >
                                <label
                                  class="amis-Checkbox amis-Checkbox--checkbox--default amis-Checkbox--sm checked amis-Checkbox--checkbox--default--checked"
                                  data-role="checkbox"
                                >
                                  <input
                                    type="checkbox"
                                  />
                                  <i>
                                    <div
                                      class="checkbox-icon icon"
                                    />
                                  </i>
                                  <span
                                    class=""
                                  />
                                </label>
                              </td>
                              <td>
                                <span>
                                  李白
                                </span>
                              </td>
                              <td>
                                <span>
                                  打野
                                </span>
                              </td>
                            </tr>
                            <tr
                              class=""
                            >
                              <td
                                class="amis-Table-checkCell"
                              >
                                <label
                                  class="amis-Checkbox amis-Checkbox--checkbox--default amis-Checkbox--sm"
                                  data-role="checkbox"
                                >
                                  <input
                                    type="checkbox"
                                  />
                                  <i>
                                    <div
                                      class="checkbox-icon icon"
                                    />
                                  </i>
                                  <span
                                    class=""
                                  />
                                </label>
                              </td>
                              <td>
                                <span>
                                  韩信
                                </span>
                              </td>
                              <td>
                                <span>
                                  打野
                                </span>
                              </td>
                            </tr>
                            <tr
                              class=""
                            >
                              <td
                                class="amis-Table-checkCell"
                              >
                                <label
                                  class="amis-Checkbox amis-Checkbox--checkbox--default amis-Checkbox--sm"
                                  data-role="checkbox"
                                >
                                  <input
                                    type="checkbox"
                                  />
                                  <i>
                                    <div
                                      class="checkbox-icon icon"
                                    />
                                  </i>
                                  <span
                                    class=""
                                  />
                                </label>
                              </td>
                              <td>
                                <span>
                                  云中君
                                </span>
                              </td>
                              <td>
                                <span>
                                  打野
                                </span>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="amis-Panel-footerWrap"
      >
        <div
          class="amis-Panel-btnToolbar amis-Panel-footer"
        >
          <button
            class="amis-Button amis-Button--primary amis-Button--size-default"
            type="submit"
          >
            <span>
              Submit
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:select table with labelField & valueField 2`] = `
{
  "a": "zhugeliang,libai",
}
`;

exports[`Renderer:select tree 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <div
              class="amis-Panel amis-Panel--default amis-Panel--form"
              data-role="container"
            >
              <div
                class="amis-Panel-heading"
              >
                <h3
                  class="amis-Panel-title"
                >
                  <span
                    class="amis-TplField fr-view"
                  >
                    <span>
                      表单
                    </span>
                  </span>
                </h3>
              </div>
              <div
                class="amis-Panel-body"
              >
                <form
                  class="amis-Form amis-Form--normal"
                  novalidate=""
                >
                  <input
                    style="display: none;"
                    type="submit"
                  />
                  <div
                    class="amis-Form-item amis-Form-item--normal"
                    data-amis-name="a"
                    data-role="form-item"
                  >
                    <label
                      class="amis-Form-label"
                    >
                      <span>
                        <span
                          class="amis-TplField fr-view"
                        >
                          <span>
                            树型展示
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="amis-SelectControl amis-Form-control"
                    >
                      <div
                        class="amis-ResultBox amis-TransferDropDown amis-Form-control is-clickable"
                        tabindex="-1"
                      >
                        <div
                          class="amis-ResultBox-value-wrap"
                        >
                          <span
                            class="amis-ResultBox-placeholder"
                          >
                            请选择
                          </span>
                        </div>
                        <div
                          class="amis-ResultBox-actions"
                        >
                          <span
                            class="amis-ResultBox-pc-arrow"
                          >
                            <icon-mock
                              classname="icon icon-right-arrow-bold"
                              icon="right-arrow-bold"
                            />
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="amis-Panel-footerWrap"
              >
                <div
                  class="amis-Panel-btnToolbar amis-Panel-footer"
                >
                  <button
                    class="amis-Button amis-Button--primary amis-Button--size-default"
                    type="submit"
                  >
                    <span>
                      提交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:select virtual 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              表单
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="select"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    选项
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-SelectControl amis-Form-control"
            >
              <div
                aria-expanded="true"
                aria-haspopup="listbox"
                aria-owns="downshift-1-menu"
                class="amis-Select is-opened"
                role="combobox"
                tabindex="0"
              >
                <div
                  class="amis-Select-valueWrap"
                >
                  <div
                    class="amis-Select-placeholder"
                  >
                    请选择
                  </div>
                </div>
                <span
                  class="amis-Select-arrow"
                >
                  <icon-mock
                    classname="icon icon-right-arrow-bold"
                    icon="right-arrow-bold"
                  />
                </span>
                <div
                  class="has-popover"
                  data-amis-theme="cxd"
                >
                  <div
                    class="amis-PopOver amis-Select-popover"
                    role="popover"
                    style="display: block; width: auto; left: 0px; top: 0px; visibility: hidden;"
                    theme="cxd"
                  >
                    <div
                      class="cxd-PopOver-overlay"
                    />
                    <div
                      class="amis-Select-menu amis-Select--longlist"
                    >
                      <div
                        style="overflow: auto; will-change: transform; height: 266px; width: 100%;"
                      >
                        <div
                          style="position: relative; width: auto; white-space: nowrap; min-height: 100%; height: 6400px;"
                        >
                          <div
                            aria-selected="false"
                            class="amis-Select-option"
                            id="downshift-1-item-0"
                            role="option"
                            style="position: absolute; top: 0px; left: 0px; width: 100%; height: 32px;"
                          >
                            <span
                              class="amis-Select-option-content"
                              title="option0"
                            >
                              option0
                            </span>
                          </div>
                          <div
                            aria-selected="false"
                            class="amis-Select-option"
                            id="downshift-1-item-1"
                            role="option"
                            style="position: absolute; top: 32px; left: 0px; width: 100%; height: 32px;"
                          >
                            <span
                              class="amis-Select-option-content"
                              title="option1"
                            >
                              option1
                            </span>
                          </div>
                          <div
                            aria-selected="false"
                            class="amis-Select-option"
                            id="downshift-1-item-2"
                            role="option"
                            style="position: absolute; top: 64px; left: 0px; width: 100%; height: 32px;"
                          >
                            <span
                              class="amis-Select-option-content"
                              title="option2"
                            >
                              option2
                            </span>
                          </div>
                          <div
                            aria-selected="false"
                            class="amis-Select-option"
                            id="downshift-1-item-3"
                            role="option"
                            style="position: absolute; top: 96px; left: 0px; width: 100%; height: 32px;"
                          >
                            <span
                              class="amis-Select-option-content"
                              title="option3"
                            >
                              option3
                            </span>
                          </div>
                          <div
                            aria-selected="false"
                            class="amis-Select-option"
                            id="downshift-1-item-4"
                            role="option"
                            style="position: absolute; top: 128px; left: 0px; width: 100%; height: 32px;"
                          >
                            <span
                              class="amis-Select-option-content"
                              title="option4"
                            >
                              option4
                            </span>
                          </div>
                          <div
                            aria-selected="false"
                            class="amis-Select-option"
                            id="downshift-1-item-5"
                            role="option"
                            style="position: absolute; top: 160px; left: 0px; width: 100%; height: 32px;"
                          >
                            <span
                              class="amis-Select-option-content"
                              title="option5"
                            >
                              option5
                            </span>
                          </div>
                          <div
                            aria-selected="false"
                            class="amis-Select-option"
                            id="downshift-1-item-6"
                            role="option"
                            style="position: absolute; top: 192px; left: 0px; width: 100%; height: 32px;"
                          >
                            <span
                              class="amis-Select-option-content"
                              title="option6"
                            >
                              option6
                            </span>
                          </div>
                          <div
                            aria-selected="false"
                            class="amis-Select-option"
                            id="downshift-1-item-7"
                            role="option"
                            style="position: absolute; top: 224px; left: 0px; width: 100%; height: 32px;"
                          >
                            <span
                              class="amis-Select-option-content"
                              title="option7"
                            >
                              option7
                            </span>
                          </div>
                          <div
                            aria-selected="false"
                            class="amis-Select-option"
                            id="downshift-1-item-8"
                            role="option"
                            style="position: absolute; top: 256px; left: 0px; width: 100%; height: 32px;"
                          >
                            <span
                              class="amis-Select-option-content"
                              title="option8"
                            >
                              option8
                            </span>
                          </div>
                          <div
                            aria-selected="false"
                            class="amis-Select-option"
                            id="downshift-1-item-9"
                            role="option"
                            style="position: absolute; top: 288px; left: 0px; width: 100%; height: 32px;"
                          >
                            <span
                              class="amis-Select-option-content"
                              title="option9"
                            >
                              option9
                            </span>
                          </div>
                          <div
                            aria-selected="false"
                            class="amis-Select-option"
                            id="downshift-1-item-10"
                            role="option"
                            style="position: absolute; top: 320px; left: 0px; width: 100%; height: 32px;"
                          >
                            <span
                              class="amis-Select-option-content"
                              title="option10"
                            >
                              option10
                            </span>
                          </div>
                          <div
                            aria-selected="false"
                            class="amis-Select-option"
                            id="downshift-1-item-11"
                            role="option"
                            style="position: absolute; top: 352px; left: 0px; width: 100%; height: 32px;"
                          >
                            <span
                              class="amis-Select-option-content"
                              title="option11"
                            >
                              option11
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="amis-Panel-footerWrap"
      >
        <div
          class="amis-Panel-btnToolbar amis-Panel-footer"
        >
          <button
            class="amis-Button amis-Button--primary amis-Button--size-default"
            type="submit"
          >
            <span>
              提交
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
